package com.ssm.flyweight;

/**
 * @author shaoshao
 * @version 1.0
 * @date 2022/5/22 20:36
 */
public abstract class WebSite {
    public abstract void use(User user);
}
