@startuml
'https://plantuml.com/class-diagram

class WebSiteFactory{
    getWebSiteCategory(type):void
}
class WebSite{
    use():void
}
WebSiteFactory o-- WebSite
class ConcreteWebSite extends WebSite{
    use():void
}
class User
note top: User User是享元模式\n中的外部状态
class Client
Client ..> WebSiteFactory
Client ..> ConcreteWebSite
Client ..> User
ConcreteWebSite ..> User
@enduml